--- a/src/app/shared/components/home-login/home-login.component.scss
+++ b/src/app/shared/components/home-login/home-login.component.scss
@@ -36,4 +36,10 @@
       }
     }
   }
+
+  p.text-center{
+    color: white;
+    text-align: center;
+    font: normal normal normal 12px/24px;
+  }
 }
