--- a/src/app/shared/components/main-toolbar/main-toolbar.component.scss
+++ b/src/app/shared/components/main-toolbar/main-toolbar.component.scss
@@ -36,20 +36,34 @@
           display: flex;
           flex-direction: row;
           align-items: center;
+          height: 100%;
 
           .nav-item {
             margin-right: 40px;
             cursor: pointer;
+            height: 100%;
+            display: flex;
+            align-items: center;
 
             p {
               margin: 0;
               font: normal normal medium 15px/23px Poppins;
               color: white;
+              height: 100%;
+              border-top: 4px solid transparent;
+              display: flex;
+              align-items: center;
+
+              &.active-route {
+                color: $main-yellow;
+                border-top: 4px solid $main-yellow;
+              }
             }
 
             &:hover {
-              p{
+              p {
                 color: $main-yellow;
+                border-top: 4px solid $main-yellow;
               }
             }
           }
